<resources>
    <string name="app_name">SpotifyConsult</string>
    <string name="spotify">Spotify</string>
    <string name="consult">Consult</string>
    <string name="powered_by_felipe_martins">\@Powered by Felipe Martins</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="playlists">Playlists</string>
    <string name="profile_name">Profile Name</string>
    <string name="account_type">Account Type</string>

    <!-- Profile Fragment Strings -->
    <style name="profile">Profile</style>
    <string name="birthday">Birthday</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="followers">Followers</string>
    <string name="product">Product</string>
    <string name="type">Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
