<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SplashActivity"
        android:background="@drawable/background_green">

    <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:src="@drawable/ic_spotify_icon"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.269" android:id="@+id/imageView">
    </ImageView>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/spotify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:textSize="@dimen/spotify_splash"
            android:fontFamily="" android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.698"
            app:layout_constraintVertical_bias="1.0">
    </TextView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consult"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.471"
            android:textSize="@dimen/spotify_splash" android:id="@+id/textView2">

    </TextView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_felipe_martins" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/textView3"/>

    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminateTint="#000"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>